Bug 377472 - Crash when importing code java
Summary: Crash when importing code java
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.2 (KDE Applications 16.12.2)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-10 19:55 UTC by Pascal Deville
Modified: 2017-03-13 11:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.3 (KDE Applications 16.12.3)
Sentry Crash Report:


Attachments
java class file (1.34 KB, application/x-zip-compressed)
2017-03-10 19:55 UTC, Pascal Deville
Details
dbgview output (3.39 KB, application/x-zip-compressed)
2017-03-13 08:58 UTC, Pascal Deville
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal Deville 2017-03-10 19:55:00 UTC
Created attachment 104498 [details]
java class file

When I import the class in the zip 1 by 1 it worked without problem. When importing all together umbrello crashes
Comment 1 Ralf Habacker 2017-03-12 16:45:39 UTC
To be sure: In the crash case you did set the active language to 'Java' and selected "Import from directory" from the "sourcecode" menu ?

To be able to get some more informations it would be nice if you would download and install drmingw from https://github.com/jrfonseca/drmingw. 

Additional to get symbols it is required to download umbrello debug symbols with the same architecture (win32 or win64) as installed umbrello from http://download.kde.org/stable/umbrello/2.21.2 (debug symbols are in the *debug.7z packages) and unpack them in the umbrello install root e.g. the directory where the bin dir is located)

Now you can run umbrello and if it crashes drmingw will open a related window. Please copy and paste the content of the mentioned into this bug as additional comment.

To get even more informations you can download dbgview from  https://download.sysinternals.com/files/DebugView.zip. Unpack the file and start dbgview before starting umbrello. It will reports umbrello's internal debug messages.
Comment 2 Ralf Habacker 2017-03-13 08:40:58 UTC
Git commit 9144401c6475f91d24f92d2d303cf860e635c2d2 by Ralf Habacker.
Committed on 12/03/2017 at 19:32.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Crash when importing code java'

Do not call name() of deleted UMLObject instance.
FIXED-IN:2.21.3 (KDE Applications 16.12.3)

M  +9    -8    umbrello/codeimport/import_utils.cpp

https://commits.kde.org/umbrello/9144401c6475f91d24f92d2d303cf860e635c2d2
Comment 3 Ralf Habacker 2017-03-13 08:56:47 UTC
From my observations crashes only the WIN32 package, not the WIN64 package, so a workaround it s use the 64bit packages instead.
The windows release 2.21.3 containing this fix will be released soon.
Comment 4 Pascal Deville 2017-03-13 08:58:56 UTC
Created attachment 104534 [details]
dbgview output
Comment 5 Pascal Deville 2017-03-13 09:01:43 UTC
Efectively the language is set to java and I run code importing wizard from the code menu.

I try to installed drmingw (drmingw -i) but nothing pops up when umbrello is crashing. Then I have installed dbgview that give the attached file as output
Comment 6 Ralf Habacker 2017-03-13 11:44:44 UTC
(In reply to Pascal Deville from comment #5)
> Efectively the language is set to java and I run code importing wizard from
> the code menu.
> 
> I try to installed drmingw (drmingw -i) but nothing pops up when umbrello is
> crashing. Then I have installed dbgview that give the attached file as output

Thanks for this info. From the dbgview info I saw 
Model_Utils::findUMLObject: type mismatch for  "AclTypeEnum"  (seeking type:  "ot_Enum" , found type:  "ot_Class" ).
which gave me an idea what's going wrong. Fix has been applied and will be included in the next release.