Fix 'Crash when importing code java'

Do not call name() of deleted UMLObject instance.

BUG:377472
FIXED-IN:2.21.3 (KDE Applications 16.12.3)